name:                cardano-sl-generator
version:             1.3.0
synopsis:            Cardano SL - arbitrary data generation
description:         Cardano SL - arbitrary data generation
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2017 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Generator
                       Pos.Generator.Block

                       Pos.Generator.BlockEvent
                       Pos.Generator.BlockEvent.DSL

                       -- Common code for tests
                       Test.Pos.Block.Logic.Mode
                       Test.Pos.Block.Logic.Emulation
                       Test.Pos.Block.Logic.Util
                       Test.Pos.Block.Logic.Event

  other-modules:
                       Pos.Generator.Block.Error
                       Pos.Generator.Block.Logic
                       Pos.Generator.Block.Mode
                       Pos.Generator.Block.Orphans
                       Pos.Generator.Block.Param
                       Pos.Generator.Block.Payload

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-chain
                     , cardano-sl-client
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-db
                     , cardano-sl-infra
                     , cardano-sl-util
                     , containers
                     , cryptonite
                     , data-default
                     , ether
                     , exceptions
                     , formatting
                     , lens
                     , log-warper
                     , monad-control
                     , random
                     , safe-exceptions
                     , serokell-util
                     , text
                     , formatting
                     , time-units
                     , transformers-base
                     , universum
                     , unliftio
                     , unordered-containers
                     , vector


  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite cardano-generator-test
  main-is:             Test.hs
  other-modules:
                       Spec

                       Test.Pos.Binary.CommunicationSpec
                       Test.Pos.Block.Logic.CreationSpec
                       Test.Pos.Block.Logic.VarSpec
                       Test.Pos.Block.Property
                       Test.Pos.Generator.Block.LrcSpec

  type:                exitcode-stdio-1.0

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , cardano-sl
                     , cardano-sl-binary
                     , cardano-sl-chain
                     , cardano-sl-chain-test
                     , cardano-sl-core
                     , cardano-sl-core-test
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-db
                     , cardano-sl-generator
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , data-default
                     , formatting
                     , hspec
                     , lens
                     , safe-exceptions
                     , serokell-util
                     , universum >= 0.1.11
                     , unordered-containers

  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -rtsopts
                       -Wall

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

benchmark cardano-sl-verification-bench
  hs-source-dirs:       bench
  main-is:              Main.hs
  other-modules:        Bench.Pos.Criterion.Block.Logic
  type:                 exitcode-stdio-1.0
  build-depends:        async
                      , base
                      , cardano-sl
                      , cardano-sl-binary
                      , cardano-sl-chain
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-util
                      , containers
                      , criterion
                      , cryptonite
                      , data-default
                      , ether
                      , lens
                      , log-warper
                      , lrucache
                      , MonadRandom
                      , mtl
                      , QuickCheck
                      , random
                      , time-units
                      , universum >= 0.1.11
                      , unliftio-core
                      , unordered-containers
                      , serokell-util
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -rtsopts
                        -Wall
                        -O2
  if os(linux)
    ghc-options:        -optl-fuse-ld=gold
    ld-options:         -fuse-ld=gold
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TypeFamilies
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring
  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

executable cardano-sl-verification-bench-exe
  hs-source-dirs:       app
  main-is:              VerificationBench.hs
  build-depends:        async
                      , base
                      , bytestring
                      , cardano-sl
                      , cardano-sl-binary
                      , cardano-sl-chain
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-generator
                      , cardano-sl-infra
                      , cardano-sl-networking
                      , cardano-sl-util
                      , containers
                      , criterion
                      , cryptonite
                      , data-default
                      , deepseq
                      , directory
                      , ether
                      , formatting
                      , lens
                      , log-warper
                      , lrucache
                      , MonadRandom
                      , mtl
                      , optparse-applicative
                      , QuickCheck
                      , random
                      , text
                      , time-units
                      , universum >= 0.1.11
                      , unliftio-core
                      , unordered-containers
  default-language:     Haskell2010
  ghc-options:        -threaded
                      -rtsopts
                      -Wall
                      -main-is VerificationBench
                      -O2
  if os(linux)
    ghc-options:        -optl-fuse-ld=gold
    ld-options:         -fuse-ld=gold
  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TypeFamilies
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring
  build-tools: cpphs >= 1.19
  ghc-options: -threaded -pgmP cpphs -optP --cpp
