name:                cardano-sl-infra
version:             1.1.1
synopsis:            Cardano SL - infrastructural
description:         Cardano SL - infrastructural
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        -- Arbitrary
                        Pos.Arbitrary.Slotting
                        Pos.Arbitrary.Infra

                        -- Diffusion layer
                        Pos.Diffusion.Transport.TCP
                        Pos.Diffusion.Types
                        Pos.Diffusion.Subscription.Common
                        Pos.Diffusion.Subscription.Dns
                        Pos.Diffusion.Subscription.Dht

                        Pos.DHT.Workers

                        -- Reporting
                        Pos.Reporting
                        Pos.Reporting.Exceptions
                        Pos.Reporting.MemState
                        Pos.Reporting.Methods
                        Pos.Reporting.Metrics

                        -- StateLock
                        Pos.StateLock

                        -- Slotting
                        Pos.Slotting
                        Pos.Slotting.Class
                        Pos.Slotting.Impl
                        Pos.Slotting.Impl.Simple
                        Pos.Slotting.Impl.Util
                        Pos.Slotting.MemState
                        Pos.Slotting.Types
                        Pos.Slotting.Error
                        Pos.Slotting.Util

                        -- Pos.DHT
                        Pos.DHT
                        Pos.DHT.Constants
                        Pos.DHT.Model
                        Pos.DHT.Model.Types
                        Pos.DHT.Real
                        Pos.DHT.Real.Real
                        Pos.DHT.Real.Types
                        Pos.DHT.Real.Param
                        Pos.DHT.Real.CLI

                        -- Pos.Communication
                        Pos.Communication.Constants
                        Pos.Communication.Types.Protocol
                        Pos.Communication.Types.Relay
                        Pos.Communication.BiP
                        Pos.Communication.Limits.Types
                        Pos.Communication.Limits.Instances
                        Pos.Communication.Listener
                        Pos.Communication.Protocol
                        Pos.Communication.Specs
                        Pos.Communication.Relay
                        Pos.Communication.Relay.Class
                        Pos.Communication.Relay.Logic
                        Pos.Communication.Relay.Types
                        Pos.Communication.Relay.Util
                        Pos.Communication.Util

                        -- Health Checks
                        Pos.HealthCheck.Route53

                        -- Known peers
                        Pos.KnownPeers

                        -- Network topology
                        Pos.Network.DnsDomains
                        Pos.Network.Policy
                        Pos.Network.Types
                        Pos.Network.Yaml
                        Pos.Network.CLI

                        -- Recovery
                        Pos.Recovery.Info

                        -- Reporting
                        Pos.Reporting.Health.Types
                        Pos.Reporting.Ekg
                        Pos.Reporting.Statsd

                        -- Pos.Shutdown
                        Pos.Shutdown
                        Pos.Shutdown.Class
                        Pos.Shutdown.Logic
                        Pos.Shutdown.Types

                        -- Statistics
                        Pos.Statistics
                        Pos.Statistics.Ekg
                        Pos.Statistics.Statsd

                        -- NTP
                        Pos.Ntp.Configuration

                        -- Pos.Binary
                        Pos.Binary.Infra
                        Pos.Binary.Infra.DHTModel
                        Pos.Binary.Infra.Slotting
                        Pos.Binary.Infra.Relay

                        -- Pos.Util
                        Pos.Util.JsonLog.Events
                        Pos.Util.LogSafe
                        Pos.Util.Monitor
                        Pos.Util.TimeLimit
                        Pos.Util.TimeWarp

                        -- Pos.Worker
                        Pos.Worker.Types

  other-modules:        Paths_cardano_sl_infra

  build-depends:        aeson
                      , async
                      , base
                      , parsec
                      , base64-bytestring
                      , bytestring
                      , cardano-sl-binary
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-networking
                      , cardano-sl-util
                      , cardano-report-server >= 0.4.5
                      , conduit
                      , containers
                      , directory
                      , dns
                      , ekg-core
                      , ekg-statsd
                      , ekg-wai
                      , ether >= 0.5
                      , exceptions
                      , filepath
                      , formatting
                      , generic-arbitrary
                      , lzma-conduit
                      , hashable
                      , http-client
                      , http-client-tls
                      , iproute
                      , kademlia
                      , lens
                      , log-warper >= 1.0.3
                      , mtl
                      , network-info
                      , network-transport
                      , network-transport-tcp
                      , optparse-applicative
                      , QuickCheck
                      , reflection
                      , safe-exceptions
                      , serokell-util >= 0.1.3.4
                      , stm
                      , clock
                      , tagged
                      , template-haskell
                      , tar
                      , text
                      , text-format
                      , time
                      , time-units
                      , transformers
                      , network-transport
                      , universum
                      , unordered-containers
                      , yaml

  if !os(windows)
    exposed-modules:   Pos.Util.SigHandler
    build-depends:     unix

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
