name:                cardano-sl-infra
version:             2.0.0
synopsis:            Cardano SL - infrastructural
description:         Cardano SL - infrastructural
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                        -- Diffusion layer
                        Pos.Infra.Diffusion.Transport.TCP
                        Pos.Infra.Diffusion.Types
                        Pos.Infra.Diffusion.Subscription.Common
                        Pos.Infra.Diffusion.Subscription.Dns
                        Pos.Infra.Diffusion.Subscription.Dht
                        Pos.Infra.Diffusion.Subscription.Status
                        Pos.Infra.Diffusion.Subscription.Subscriber

                        -- Reporting
                        Pos.Infra.Reporting
                        Pos.Infra.Reporting.Ekg
                        Pos.Infra.Reporting.Exceptions
                        Pos.Infra.Reporting.Health.Types
                        Pos.Infra.Reporting.Http
                        Pos.Infra.Reporting.Methods
                        Pos.Infra.Reporting.NodeInfo
                        Pos.Infra.Reporting.Statsd

                        -- StateLock
                        Pos.Infra.StateLock

                        -- Slotting
                        Pos.Infra.Slotting
                        Pos.Infra.Slotting.Class
                        Pos.Infra.Slotting.Impl
                        Pos.Infra.Slotting.Impl.Simple
                        Pos.Infra.Slotting.Impl.Util
                        Pos.Infra.Slotting.Types
                        Pos.Infra.Slotting.Error
                        Pos.Infra.Slotting.Util

                        -- Pos.Infra.DHT
                        Pos.Infra.DHT
                        Pos.Infra.DHT.Constants
                        Pos.Infra.DHT.Model
                        Pos.Infra.DHT.Model.Types
                        Pos.Infra.DHT.Real
                        Pos.Infra.DHT.Real.Real
                        Pos.Infra.DHT.Real.Types
                        Pos.Infra.DHT.Real.Param
                        Pos.Infra.DHT.Real.CLI
                        Pos.Infra.DHT.Workers

                        -- Pos.Infra.Communication
                        Pos.Infra.Communication.Constants
                        Pos.Infra.Communication.Types.Protocol
                        Pos.Infra.Communication.Types.Relay
                        Pos.Infra.Communication.BiP
                        Pos.Infra.Communication.Limits.Instances
                        Pos.Infra.Communication.Listener
                        Pos.Infra.Communication.Protocol
                        Pos.Infra.Communication.Specs
                        Pos.Infra.Communication.Relay
                        Pos.Infra.Communication.Relay.Class
                        Pos.Infra.Communication.Relay.Logic
                        Pos.Infra.Communication.Relay.Types
                        Pos.Infra.Communication.Relay.Util

                        -- Fault injection
                        Pos.Infra.InjectFail

                        -- Health Checks
                        Pos.Infra.HealthCheck.Route53

                        -- Network topology
                        Pos.Infra.Network.DnsDomains
                        Pos.Infra.Network.Policy
                        Pos.Infra.Network.Types
                        Pos.Infra.Network.Yaml
                        Pos.Infra.Network.CLI

                        -- Recovery
                        Pos.Infra.Recovery.Info
                        Pos.Infra.Recovery.Types

                        -- Pos.Infra.Shutdown
                        Pos.Infra.Shutdown
                        Pos.Infra.Shutdown.Class
                        Pos.Infra.Shutdown.Logic
                        Pos.Infra.Shutdown.Types

                        -- Statistics
                        Pos.Infra.Statistics
                        Pos.Infra.Statistics.Ekg
                        Pos.Infra.Statistics.Statsd

                        -- Pos.Infra.Binary
                        Pos.Infra.Binary
                        Pos.Infra.Binary.DHTModel

                        -- Pos.Util
                        Pos.Infra.Util.JsonLog.Events
                        Pos.Infra.Util.LogSafe
                        Pos.Infra.Util.Monitor
                        Pos.Infra.Util.TimeLimit
                        Pos.Infra.Util.TimeWarp


  other-modules:        Paths_cardano_sl_infra

  build-depends:        aeson
                      , async
                      , base
                      , parsec
                      , base64-bytestring
                      , bytestring
                      , cardano-sl-binary
                      , cardano-sl-chain
                      , cardano-sl-core
                      , cardano-sl-crypto
                      , cardano-sl-db
                      , cardano-sl-networking
                      , cardano-sl-util
                      , cardano-report-server >= 0.4.5
                      , clock
                      , containers
                      , directory
                      , dns
                      , ekg-core
                      , ekg-statsd
                      , ekg-wai
                      , ether >= 0.5
                      , exceptions
                      , formatting
                      , hashable
                      , http-client
                      , http-client-tls
                      , iproute
                      , kademlia
                      , lens
                      , mtl
                      , network-info
                      , network-transport
                      , network-transport-tcp
                      , optparse-applicative
                      , safe-exceptions
                      , serokell-util >= 0.1.3.4
                      , stm
                      , time
                      , tagged
                      , text
                      , time-units
                      , network-transport
                      , universum
                      , unliftio
                      , unordered-containers
                      , yaml

  if !os(windows)
    exposed-modules:   Pos.Infra.Util.SigHandler
    build-depends:     unix

  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite infra-test
  main-is:          test.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  other-modules:    Spec
                    Test.Pos.Infra.Arbitrary
                    Test.Pos.Infra.Arbitrary.Communication
                    Test.Pos.Infra.Arbitrary.Slotting
                    Test.Pos.Infra.Arbitrary.Ssc
                    Test.Pos.Infra.Arbitrary.Txp
                    Test.Pos.Infra.Arbitrary.Update
                    Test.Pos.Infra.Bi
                    Test.Pos.Infra.Diffusion.Subscription.StatusSpec
                    Test.Pos.Infra.Diffusion.Subscription.SubscriptionSpec
                    Test.Pos.Infra.Gen
                    Test.Pos.Infra.Json

  build-depends:    QuickCheck
                  , async
                  , base
                  , bytestring
                  , cardano-sl-binary-test
                  , cardano-sl-chain
                  , cardano-sl-chain-test
                  , cardano-sl-core
                  , cardano-sl-core-test
                  , cardano-sl-crypto
                  , cardano-sl-crypto-test
                  , cardano-sl-infra
                  , cardano-sl-networking
                  , cardano-sl-util-test
                  , containers
                  , dns
                  , generic-arbitrary
                  , hedgehog
                  , hspec
                  , iproute
                  , kademlia
                  , universum

  ghc-options:         -Wall
                       -O2
                       -threaded

  default-extensions:  NoImplicitPrelude
